--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,11 @@
-all: main
+all: main des
+	gcc -o DES main.c des.c
 
-main: main.c des.h
-	gcc -o DES -g main.c
+main: main.c
+	gcc -c main.c
+
+des: des.c des.h
+	gcc -c des.c
 
 clean:
 	rm DES
